<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_action_line_chart"
            android:title="热门日报" />
        <item
            android:id="@+id/nav_theme"
            android:icon="@drawable/ic_action_mustache"
            android:title="@string/allSections" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_action_knight"
            android:title="@string/HistoryDaily" />
        <!--<item-->
        <!--android:id="@+id/nav_manage"-->
        <!--android:icon="@drawable/ic_menu_manage"-->
        <!--android:title="Tools" />-->
    </group>

    <item android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_fingerprint"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_gitHub"
                android:icon="@drawable/ic_action_github"
                android:title="GitHub" />
        </menu>
    </item>

    <group
        android:id="@+id/drawerSetting"
        android:checkableBehavior="single">

        <item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/noImagesSwitch"
            android:title="@string/noImages"
            app:actionLayout="@layout/drawer_setting"
            app:showAsAction="always" />

        <item xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dayNightSwitch"
            android:title="@string/dayNightMode"
            app:actionLayout="@layout/drawer_setting"
            app:showAsAction="always" />
    </group>

</menu>
